<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="16dp">

    <TextView
        android:id="@+id/license_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/license_title"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toTopOf="parent"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        app:layout_constraintTop_toBottomOf="@id/license_title"
        android:background="@android:color/darker_gray"/>

    <TextView
        android:id="@+id/license_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/license"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@id/license_title"/>

    <TextView
        android:id="@+id/icons_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/icons_title"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/license_text"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        app:layout_constraintTop_toBottomOf="@id/icons_title"
        android:background="@android:color/darker_gray"/>

    <TextView
        android:id="@+id/icons_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/icons"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@id/icons_title"/>

</androidx.constraintlayout.widget.ConstraintLayout>