<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="authActivity"
            type="omega.isaacbenito.saberapp.authentication.AuthenticatorActivity" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/authentication_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="17dp"
        android:paddingRight="17dp"

        >

        <androidx.constraintlayout.widget.Group
            android:id="@+id/login_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="visible"
            app:constraint_referenced_ids="signIn_submit, newUser" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/register_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:constraint_referenced_ids="name, surname, accountPassword_repeat, signUp_submit, alreadyMember" />

        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/user_name_hint"
            android:inputType="text"
            android:padding="10dp"
            app:layout_constraintBottom_toTopOf="@id/surname"
            app:layout_constraintTop_toTopOf="@id/authentication_layout"
            app:layout_constraintVertical_chainStyle="packed"
            tools:layout_editor_absoluteX="17dp" />

        <EditText
            android:id="@+id/surname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/user_surname_hint"
            android:inputType="text"
            android:padding="10dp"
            app:layout_constraintBottom_toTopOf="@id/accountMail"
            app:layout_constraintTop_toBottomOf="@id/name" />

        <EditText
            android:id="@+id/accountMail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/user_email_hint"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            app:layout_constraintBottom_toTopOf="@id/accountPassword"
            app:layout_constraintTop_toBottomOf="@id/surname" />

        <EditText
            android:id="@+id/accountPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/user_password_hint"
            android:inputType="textPassword"
            android:padding="10dp"
            app:layout_constraintBottom_toTopOf="@id/accountPassword_repeat"
            app:layout_constraintTop_toBottomOf="@id/accountMail" />

        <EditText
            android:id="@+id/accountPassword_repeat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/user_password_repeat_hint"
            android:inputType="textPassword"
            android:padding="10dp"
            app:layout_constraintBottom_toTopOf="@id/signIn_submit"
            app:layout_constraintTop_toBottomOf="@id/accountPassword" />

        <Button
            android:id="@+id/signIn_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:padding="10dp"
            android:text="@string/user_signIn"
            app:layout_constraintBottom_toTopOf="@id/signUp_submit"
            app:layout_constraintTop_toBottomOf="@id/accountPassword_repeat"
            android:onClick="@{() -> authActivity.submit()}"/>

        <Button
            android:id="@+id/signUp_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:padding="10dp"
            android:text="@string/user_signUp"
            app:layout_constraintBottom_toTopOf="@id/newUser"
            app:layout_constraintTop_toBottomOf="@id/signIn_submit" />

        <TextView
            android:id="@+id/newUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/new_user"
            app:layout_constraintBottom_toTopOf="@id/alreadyMember"
            app:layout_constraintTop_toBottomOf="@id/signUp_submit"
            />

        <TextView
            android:id="@+id/alreadyMember"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/already_member"
            app:layout_constraintBottom_toBottomOf="@id/authentication_layout"
            app:layout_constraintTop_toBottomOf="@id/newUser"
            />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>