<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ This file is part of SaberApp.
  ~
  ~     SaberApp is free software: you can redistribute it and/or modify
  ~     it under the terms of the GNU General Public License as published by
  ~     the Free Software Foundation, either version 3 of the License, or
  ~     (at your option) any later version.
  ~
  ~     SaberApp is distributed in the hope that it will be useful,
  ~     but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~     GNU General Public License for more details.
  ~
  ~     You should have received a copy of the GNU General Public License
  ~     along with SaberApp.  If not, see <https://www.gnu.org/licenses/>.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/rulesFragment"
        android:title="@string/menu_saberapp_rules"
        android:icon="@drawable/rules"/>

    <item
        android:id="@+id/aboutFragment"
        android:title="@string/menu_about_saberapp"
        android:icon="@drawable/about"/>

    <item
        android:id="@+id/settingsFragment"
        android:title="@string/settings"
        android:icon="@drawable/settings"/>

</menu>