<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="jocVM"
            type="omega.isaacbenito.saberapp.jocpreguntes.model.JocPreguntesViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/edit_profile_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_footer_dialog"
        android:padding="15dp">

    <TextView
        android:id="@+id/confirm_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:text="@string/save_answer"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/confirm_yes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/yes"
        android:textColor="@color/colorAccent"
        android:textSize="18sp"
        android:textStyle="bold"
        android:onClick="@{()->jocVM.onRespostaConfirmada(true)}"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toLeftOf="@id/confirm_no"
        app:layout_constraintLeft_toRightOf="@id/confirm_text"/>

    <TextView
        android:id="@+id/confirm_no"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no"
        android:textColor="@color/colorAccent"
        android:textSize="18sp"
        android:textStyle="bold"
        android:onClick="@{()->jocVM.onRespostaConfirmada(false)}"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@id/confirm_yes"/>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>